--- a/30_sources/ZGEN_Documents/RS_Zupfnoter.latex
+++ b/30_sources/ZGEN_Documents/RS_Zupfnoter.latex
@@ -211,7 +211,7 @@ Basic approach in for these instruments is, that the music sheet is
 placed on the instrument such that the particular note and the string
 are visually connected.
 
-The following piece
+The following example illustrates the approach.
 
 \includegraphics{../RS_Requirements/example_notation.pdf}~
 
@@ -332,6 +332,10 @@ The following objectives are valid for Zupfnoter
   {[}RS\_SYS\_005{]} \textbf{\hypertarget{RS-SYS-005}{}Batch Operation}
   \{ Zupfnoter shall be operational as batch tool
   \}(\hyperlink{RS-MG-002}{RS\_MG\_002})
+\item
+  {[}RS\_SYS\_005{]} \textbf{\hypertarget{RS-SYS-005}{}Cloud storage} \{
+  Zupfnoter shall be able to communicate with cloud storage such as
+  Dropbox, Owncloud \}(\hyperlink{RS-MG-002}{RS\_MG\_002})
 \end{itemize}
 
 \subsection{Input}
@@ -339,7 +343,7 @@ The following objectives are valid for Zupfnoter
 \begin{itemize}
 \item
   {[}RS\_IN\_001{]} \textbf{\hypertarget{RS-IN-001}{}Shall be able to
-  process various input formatc} \{ Zupfnoter shall be able to process
+  process various input formats} \{ Zupfnoter shall be able to process
   various input formats. Primarily such as
 
   \begin{itemize}
@@ -374,8 +378,8 @@ The following objectives are valid for Zupfnoter
   \hyperlink{RS-MG-002}{RS\_MG\_002})
 \item
   {[}RS\_IN\_003{]} \textbf{\hypertarget{RS-IN-003}{}audible Feedback of
-  curent note} \{ The current note shall be played after it is entered /
-  changed / selected.
+  current note} \{ The current note shall be played after it is entered
+  / changed / selected.
 
   ``Selected'' means
 
@@ -423,9 +427,14 @@ The following objectives are valid for Zupfnoter
     or ``Table Harp notes'' \}(\hyperlink{RS-MG-001}{RS\_MG\_001},
     \hyperlink{RS-MG-002}{RS\_MG\_002})
   \end{itemize}
+\item
+  {[}RS\_IN\_008{]} \textbf{\hypertarget{RS-IN-008}{}Automatic save and
+  restore} \{ Zupfnoter shall be able to automatically save current
+  changes in order to prevent from data loss.
+  \}(\hyperlink{RS-MG-002}{RS\_MG\_002})
 \end{itemize}
 
-\subsection{Output}
+\subsection{Output of Harpnotes}
 
 \begin{itemize}
 \item
@@ -438,8 +447,8 @@ The following objectives are valid for Zupfnoter
   pages} \{ A Table Harp notes are larger than A4 pages, Zupfnoter shall
   provide a print which can easily be combined.
 
-  This is in paricular to support the fact that private userd usually do
-  not have A3 printers {[}\hyperlink{RS-MG-002}{RS\_MG\_002}{]}
+  This is in particular to support the fact that private users usually
+  do not have A3 printers {[}\hyperlink{RS-MG-002}{RS\_MG\_002}{]}
 
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
@@ -467,33 +476,91 @@ The following objectives are valid for Zupfnoter
   {[}RS\_OUT\_004{]} \textbf{\hypertarget{RS-OUT-004}{}Optimize page
   layout} \{ Page layout shall be optimized depending on user request:
 
+  \begin{description}
+  \item[compact]
+  the vertical distance is constant and selectable by the user in grid
+  measueres. One grid measure is the size of the smallest note
+  \item[automatically]
+  the vertical distance depends on the amount of notes which need to be
+  rendered such that the entire sheet is filled.
+
+  In this mode, it shall be possible to select the voices to be
+  considered during optimization. By this on can create excerpts where
+  all voices share the same vertical positions.
+
+  On the other hand, if only the printed voices are considered for
+  optimization, it is likely that more music fits on the page.
+  \end{description}
+
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    compact, the vertical distance is constant and selectable by the
-    user in grid measueres. One grid measure is the size of the smallest
-    note
-  \item
-    automatically, the vertical distance depends on the amount of notes
-    which need to be rendered such that the entire scheet is
-    filled.\}(\hyperlink{RS-MG-002}{RS\_MG\_002})
+    \}(\hyperlink{RS-MG-002}{RS\_MG\_002})
   \end{itemize}
+\item
+  {[}RS\_OUT\_005{]} \textbf{\hypertarget{RS-OUT-005}{}Shall allow to
+  fine tune positions} \{ It shall be possible to control the position
+  of
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    legend
+  \item
+    annotations
+  \item
+    harpnotes (beginning of the notes)
+  \end{itemize}
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001},
+  \hyperlink{RS-MG-002}{RS\_MG\_002})
+\item
+  {[}RS\_OUT\_006{]} \textbf{\hypertarget{RS-OUT-006}{}Shall allow to
+  create excerpts} \{
+
+  for music with many voices it shall possible to print excepts
+  e.g.~soprano + alto
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001},
+  \hyperlink{RS-MG-002}{RS\_MG\_002})
+\item
+  {[}RS\_OUT\_007{]} \textbf{\hypertarget{RS-OUT-007}{}Shall allow page
+  annotations legend and production notes} \{
+
+  It shall be possible to place
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    a page legend derived from the abc meta-data such as Key, Author etc
+  \item
+    a production note indicating the version and host of Zupfnoter
+  \item
+    arbitrary notes bound on page coordinates
+  \end{itemize}
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001},
+  \hyperlink{RS-MG-002}{RS\_MG\_002})
 \end{itemize}
 
 \subsection{Support of Table Harp notation}
 
 \begin{itemize}
 \item
-  {[}RS\_VN\_001{]}\textbf{\hypertarget{RS-VN-001}{}Shall Support the
+  {[}RS\_VN\_001{]} \textbf{\hypertarget{RS-VN-001}{}Shall Support the
   Header annotation}\{ Zupfnoter shall be able to denote the
   Meta-Information about the piece. It is a text block on the top left
   of the page.\}(\hyperlink{RS-MG-001}{RS\_MG\_001})
 \item
-  {[}RS\_VN\_002{]}\textbf{\hypertarget{RS-VN-002}{}May Support the
+  {[}RS\_VN\_002{]} \textbf{\hypertarget{RS-VN-002}{}May Support the
   lyrics}\{ Zupfnoter may be able to print the lyrics on the right
-  margin of the page.\}(\hyperlink{RS-MG-001}{RS\_MG\_001})
+  margin of the page.
+
+  Position of lyrics shall be under control of the user.
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
 \item
-  {[}RS\_VN\_003{]}\textbf{\hypertarget{RS-VN-003}{}Shall Basic Table
+  {[}RS\_VN\_003{]} \textbf{\hypertarget{RS-VN-003}{}Shall Basic Table
   Harp notation}\{ Zupfnoter shall support the basic Table Harp
   notation:
 
@@ -548,20 +615,152 @@ The following objectives are valid for Zupfnoter
 
   \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
 \item
-  {[}RS\_VN\_004{]}\textbf{\hypertarget{RS-VN-004}{}Shall Suport
-  chords}\{ Zupfnoter shall support notes which are played
+  {[}RS\_VN\_004{]}\textbf{\hypertarget{RS-VN-004}{}Shall Support chords
+  and polyphones}\{ Zupfnoter shall support notes which are played
   simultaneously. This is indicated by dotted lines connecting the
-  particular notes of the chord.\}(\hyperlink{RS-MG-001}{RS\_MG\_001})
+  particular notes of the chord.
+
+  Note that these polyphones might come from two different use cases:
+
+  \begin{description}
+  \item[in Voice]
+  polyphones are part of one voice. Even if it is difficult to play
+  there are use cases for this. These usually are played with two
+  fingers of the same hand.
+  \item[cross voice]
+  in this case, multiple voices have a note start on the same beat. This
+  might even happen in combination of ``in Voice'' polyphonse.
+  \end{description}
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
 \item
-  {[}RS\_VN\_005{]}\textbf{\hypertarget{RS-VN-005}{}Shall repetitions}\{
-  Zupfnoter shall be able to denote repetitions by drawing a rectangular
-  line backwards.\}(\hyperlink{RS-MG-001}{RS\_MG\_001})
+  {[}RS\_VN\_005{]} \textbf{\hypertarget{RS-VN-005}{}Shall support
+  repetitions}\{ Zupfnoter shall be able to denote repetitions by
+  drawing a rectangular line backwards.
+
+  Also take care of nested repetitions
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
 \item
-  {[}RS\_VN\_006{]}\textbf{\hypertarget{RS-VN-006}{}Shall Support
+  {[}RS\_VN\_006{]} \textbf{\hypertarget{RS-VN-006}{}Shall support
+  variant endings} \{
+
+  Variant endings shall be supported such that
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    The beginnig of the variant ending is marked by an annotation
+  \item
+    The end of the variant ending is handled like a repetition
+    \}\{RS\_MG\_001\}
+  \end{itemize}
+\item
+  {[}RS\_VN\_007{]} \textbf{\hypertarget{RS-VN-007}{}Shall support
+  arbitrary continuations} \{
+
+  It shall be possible to draw abrirary goto (also known as
+  continuation, jump) lines e.g.~for ``ca capo al Fine''. For this
+  purpose, it is necessary to markup the point where to leave the
+  dentoed sequence as well as the point where to continue.
+
+  This annotation shall be done using conventions in ABC code.
+  \}\{RS\_MG\_001\}
+\item
+  {[}RS\_VN\_008{]} \textbf{\hypertarget{RS-VN-008}{}Shall optimize the
+  goto-lines} \{
+
+  goto-lines are rendered as
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    rectangular lines
+  \item
+    start at after the note and end before the note. Therby the best
+    side of the note shall be choosen.. E.g. if the target is northwest
+    of the start, the line shall start at lower left corner of the start
+    note and end at the top right corhner of the target.
+  \item
+    vertical part of the line shall be controlled by the user
+  \end{itemize}
+
+  \}\{RS\_MG\_001\}
+\item
+  {[}RS\_VN\_009{]} \textbf{\hypertarget{RS-VN-009}{}Shall Support
   arbitrary annotations}\{ Zupfnoter shall be able to denote short
   annotations embedded in the tunes. These notes shall be placed on the
   right part of the page vertically aligned to the respective
   note\}(\hyperlink{RS-MG-001}{RS\_MG\_001})
+\item
+  {[}RS\_VN\_010{]} \textbf{\hypertarget{RS-VN-010}{}Shall support ties}
+  \{
+
+  Ties are notes of the same pitch which are played legato. This is used
+  if one wants to denote a sound which plays longer than the longest
+  notifiable note. It also is used if e.g.~a four beat sound is across
+  measure boundaries.
+
+  Support of ties means
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    respect tie when playing
+  \item
+    mark the tie as a bow between the relevant notes.
+  \end{itemize}
+
+  Ties are easy to draw since all involved notes have the same pitch.
+
+  \}\{RS\_MG\_001\}
+\item
+  {[}RS\_VN\_011{]} \textbf{\hypertarget{RS-VN-011}{}Shall support
+  slurs} \{
+
+  In opposite to ties, slurs may connect notes of different pitch. Slurs
+  are played ``legato''. In fact on a table harp this not really a
+  difference.
+
+  When drawing a slur layout might be optimized according to the notes
+  involved in the slur. Maybe an extra annotation can be capplied to
+  manually optimize the layout of the slur. \}\{RS\_MG\_001\}
+\item
+  {[}RS\_VN\_012{]} \textbf{\hypertarget{RS-VN-012}{}Shall support
+  tuplets} \{
+
+  \}\{RS\_MG\_001\}
+\item
+  {[}RS\_VN\_013{]} \textbf{\hypertarget{RS-VN-013}{}Shall draw melody
+  lines} \{
+
+  Zupfnoter shall connect notes of the same voice as they represent a
+  melody.
+
+  It shall be configurable which voice represents the main meloy.
+
+  Melody lines shall be not drawn to the beginnig of a new part. see
+  {[}\hyperlink{RS-VN-016}{RS\_VN\_016}{]}
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
+\item
+  {[}RS\_VN\_015{]} \textbf{\hypertarget{RS-VN-015}{}Shall draw orphaned
+  melody lines} \{ Notes of a ``non melody'' voice which have no
+  counterparts in an other voice (therefore not being connecte with a
+  synchronization line) shall be conntected to its predecessor using a
+  light dotted line. Based on this approach no ``orphan notes'' appear
+  on the harpsheet.
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
+\item
+  {[}RS\_VN\_016{]} \textbf{\hypertarget{RS-VN-016}{}shall support
+  parts} \{
+
+  It shall be possible to divide the music in parts. Parts shall be
+  easily identified on the harpnote sheet. Parts may have a name which
+  shall be shown.in the harpnote sheet.
+
+  \}(\hyperlink{RS-MG-001}{RS\_MG\_001})
 \end{itemize}
 
 \end{document}
