#47 Now have translation for entire UI

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -1,34 +1,101 @@
 {
   "phrases": {
+    "abc Tutorial": "ABC - Einführung",
+    "All": "Alle Fenster",
+    "annotation template": "Beschriftungsvorlage",
+    "Choose extract": "Auszug wählen",
+    "configure your sheet": "Blatt konfigureren",
+    "countnotes": "Zählmarken",
+    "Create new sheet": "Neues Blatt erstellen",
     "create": "erzeugen",
-    "Create new sheet" : "Neues Blatt erstellen",
-    "Choose extract" : "Auszug wählen",
-    "configure your sheet" : "Blatt konfigureren",
-    "download abc to local system" : "ABC - File herunterladen",
-    "flowline": "Melodielinie",
+    "Demo": "Demonstration",
+    "download abc to local system": "ABC - File herunterladen",
+    "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
+    "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
+    "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
+    "Enter Harp": "Harfeneingabe",
+    "Enter Notes": "Noteneingabe",
     "Flowline": "Melodielinie",
-    "Get help" : "Hilfe anzeigen",
-    "Help" : "Hilfe",
+    "flowlines": "Melodielinien",
+    "Get help": "Hilfe anzeigen",
+    "Harp": "Harfennoten",
+    "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
+    "Help": "Hilfe",
+    "Homepage": "Homepage",
     "Id": "Identifikationsnummer",
-    "Login" : "Einloggen",
-    "Login in dropbox;\nchoose folder in Dropbox" : "In Dropbox einloggen;\nOrdner in Dropbox wählen",
+    "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
+    "jumplines": "Sprunglinien",
+    "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
+    "large": "groß",
+    "layout": "Layout",
+    "layoutlines": "Stimmen für Layout",
+    "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
+    "legend": "Legende",
+    "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
+    "Login": "Einloggen",
+    "lyrics": "Liedtexte",
+    "Manual": "Benutzerhandbuch",
+    "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
+    "medium": "normal",
     "New": "Neu",
-    "Open": "Öffnen",
+    "nonflowrest": "Begleitpausen",
+    "notes only": "Zeige nur die Noten",
+    "Notes": "Noten",
+    "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
+    "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
+    "Open an ABC tutorial (in German)": "Öffne ABC - Einfürung\nin Deutsch",
+    "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
+    "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
+    "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
+    "Open": "Öffnen",
+    "page annotation": "Seitenbeschriftung",
     "Perspective": "Ansicht",
-    "Play": "Spielen",
     "Play music": "Noten wiedergeben",
+    "Play": "Spielen",
     "Print PDF A3": "PDF A3 drucken",
     "Print PDF A4": "PDF A4 drucken",
-    "Render" : "Rendern",
-    "Render previews" : "Vorschauen neu errechnen",
-    "Save": "Speichern",
+    "produce": "Auszüge",
+    "Reference": "Referenz",
+    "Render previews": "Vorschauen neu errechnen",
+    "Render": "Rendern",
+    "repeatsigns": "Wiederholungszeichen",
+    "repeatsigns.full": "Wiederholugnszeichen.detail",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
-    "set screen perspective" : "Bildschirmansicht wählen",
-    "sheet config" : "Konfiguration",
-    "subflowline": "Hilfsmelodielinie",
-    "Title": "Titel",
-    "Yes": "Jau",
+    "Save": "Speichern",
+    "set screen perspective": "Bildschirmansicht wählen",
+    "sheet config": "Konfiguration",
+    "show all panes": "Zeigt alle Fenster an",
+    "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
+    "small": "klein",
+    "specify all details for repeat signs": "Detaillierte Angaben\nzu Wiederholungszeichen",
+    "specify details for legend": "Einzelheiten für Legende\nfestlegen",
+    "specify details for lyrics": "Einzelheiten für\nDarstellung der\nLiedtexte festlegen",
+    "specify full details for stringnams": "Detaillierte Angaben\nzu Saitennamen",
+    "specify if rests are shown outside of flowlines": "Darstellung von Pausen,\nin Stimmen ohne Melodielinie\n(Begleitgsimmen)",
+    "specify laoyut details \n(e.g. size of symbols)": "Angabe zu Layout details\nz.B.Größe der Symbole\nLinienstärken",
+    "specify output of stringnames.\n Stringnames help to tune the instrument": "Angabe zur Ausgabe von Saitennamen\nSaitennamen helfen\nbeim Stimmen des insrumentes",
+    "specify temmplate for\n note bound annotations": "Vorlage für notengebundene\nBeschriftung erstellen",
+    "specify the vertical start position of the notes": "Abstand der ersten Note\nvom oberen Blattrand",
+    "specify voices to \nbe shown in current extract": "Stimmen angeben, die im\naktuellen Auszug\ndargestellt werden sollen",
+    "specify which extracts shall be saved as PDF": "Angabe, welche Auszüge\n als PDF mit gespeichert werden",
+    "specify which voices \nshow the flowline": "Angabe, für welche Stimmen\ndie Melodielinen gezeichnet wird",
+    "specify which voices \nshow the jumplines": "Angabe, für welche Stimmen\ndie Sprunglinien gezeichnet werden",
+    "specify which voices \nshow the subflowlines": "Angabe, für welche Stimmen\ndie Hilfsmelodielinien\ngezeichnet werden",
+    "specify which voices\n shwow countnotes\n and appeareance of the same": "Angabe für welche Stimmen\nZählmarken gedruckt werden\nAngaben zum Aussehen derselben",
+    "specify which voices\nare connected by synchronization lines": "Angabe, welche Stimmenüber\nSynchronisationslinien\n(gestrichelte horizontale Linien)\nverbunden werden",
+    "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
+    "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
+    "startpos": "Startposition",
+    "stringnames": "Saitennamen",
+    "stringnames.full": "Saitennamen.detail",
+    "subflowlines": "Hilfsmelodielinien",
+    "synchlines": "Synchroniationslinien",
+    "title": "Titel",
+    "Videos": "Videos",
+    "voices": "Stimmen",
+    "Yes": "Ja",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten"
   }
 }
+
