#47 optimized size of toolbar, in German version

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -85,7 +85,7 @@
     "Returned data is not in valid JSON format.": "Zurückgegebene Daten sind nicht im JSON-Format.",
     "Save changed records": "Geänderte Elemente speichern",
     "Save Grid State": "Grid-Einstellungen speichern",
-    "Save": "Speichern",
+    "Save": "Speichern (c-S)",
     "Saving...": "Speichere...",
     "Search took": "Suchdauer:",
     "Search": "Suchen",
@@ -161,13 +161,13 @@
     "page annotation": "Seitenbeschriftung",
     "Perspective": "Ansicht",
     "Play music": "Noten wiedergeben",
-    "Play": "Spielen",
+    "Play": "Abspielen (c-P)",
     "Print PDF A3": "PDF A3 drucken",
     "Print PDF A4": "PDF A4 drucken",
     "produce": "Auszüge",
     "Reference": "Referenz",
     "Render previews": "Vorschauen neu errechnen",
-    "Render": "Rendern",
+    "Render": "Rendern (c-R)",
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
