--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -81,6 +81,8 @@
     "Required field": "Pflichtfeld",
     "Reset Column Size": "Spaltengröße zurücksetzen",
     "Reset": "Zurücksetzen",
+    "rests as V 1.3": "Pausen wie V. 1.3",
+    "configure positioning of rests\ncompatible to version 1.3": "Konfiguriere Darestllung der Pausen\nwie bei Version 1.3",
     "Restore Default State": "Standardeinstellungen wiederherstellen",
     "Returned data is not in valid JSON format.": "Zurückgegebene Daten sind nicht im JSON-Format.",
     "Save changed records": "Geänderte Elemente speichern",
