#13 now expose a message if the configuration was changed by the migrator

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -14,15 +14,11 @@
   "shortdays": ["Mo","Di","Mi","Do","Fr","Sa","So"],
   "fulldays": ["Montag","Dienstag","Mittwoch","Donnerstag","Freitag","Samstag","Sonntag"],
   "phrases": {
-
-    "abc Tutorial": "ABC - Einführung",
     "Add new record": "Neues Element hinzufügen",
     "Add New": "Neu",
     "after": "nach",
     "AJAX error. See console for more details.": "AJAX Fehler. Siehe Konsole für Details.",
     "All Fields": "Suche",
-    "All": "Alle Fenster",
-    "annotation template": "Beschriftungsvorlage",
     "Are you sure you want to delete selected records?": "Die ausgewählten Elemente wirklich löschen?",
     "Attach files by dragging and dropping or Click to Select": "Dateien per Drag&Drop hinzufügen oder per Mausklick auswählen",
     "before": "vor",
@@ -31,78 +27,40 @@
     "between": "zwischen",
     "buffered": "gepuffert",
     "Cancel": "Abbrechen",
-    "Choose extract": "Auszug wählen",
     "Clear Search": "Suche zurücksetzen",
     "Column": "Spalte",
-    "configure positioning of rests\ncompatible to version 1.3": "Konfiguriere Darestllung der Pausen\nwie bei Version 1.3",
-    "configure your sheet": "Blatt konfigureren",
     "Confirmation": "Bestätigung",
     "contains": "enthält",
-    "countnotes": "Zählmarken",
-    "Create new Sheet": "Neues Blatt erstellen",
-    "create": "erzeugen",
     "Current Date & Time": "Aktuelles Datum & Uhrzeit",
     "Delete Confirmation": "Löschen bestätigen",
     "Delete selected records": "Ausgewählte Elemente löschen",
     "Delete": "Löschen",
-    "Demo": "Demonstration",
-    "download abc to local system": "ABC - File herunterladen",
     "Edit Record": "Eintrag bearbeiten",
     "Edit selected record": "Ausgewähltes Element editieren",
     "Edit": "Editieren",
-    "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
-    "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "Empty list": "Leere Liste",
     "ends with": "endet mit",
     "ends": "endet mit",
-    "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
-    "Enter Harp": "Harfeneingabe",
-    "Enter Notes": "Noteneingabe",
     "Field should be equal to ": "Erwarteter Wert: ",
-    "Flowline": "Melodielinie",
-    "flowline": "Melodieliniexxx",
-    "flowlines": "Melodielinien",
-    "Get help": "Hilfe anzeigen",
-    "Harp": "Harfennoten",
-    "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
-    "Help": "Hilfe",
     "Hide": "Verbergen",
-    "Homepage": "Homepage",
-    "Id": "Identifikationsnummer",
     "in": "in Liste",
-    "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "is not": "ist nicht",
     "is": "ist",
-    "jumplines": "Sprunglinien",
-    "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
-    "large": "groß",
-    "layout": "Layout",
-    "layoutlines": "Stimmen für Layout",
-    "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
-    "legend": "Legende",
     "less than": "kleiner",
     "letters or more...": "Zeichen oder mehr...",
     "Line #": "Zeile #",
     "Load": "Lade",
     "Loading...": "Lädt ...",
-    "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
-    "Login": "Einloggen",
-    "lyrics": "Liedtexte",
-    "Manual": "Benutzerhandbuch",
-    "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
-    "medium": "normal",
     "Modified": "Geändert",
     "more than": "größer",
     "More": "mehr",
     "Multi Fields": "Detailsuche",
     "Multiple Fields": "Mehrere Felder",
     "Name": "Name",
-    "New": "Neu",
     "No items found": "Keine Einträge gefunden",
     "No matches": "Keine Treffer",
     "No": "Nein",
     "none": "keine",
-    "nonflowrest": "Begleitpausen",
     "Not a float": "Keine gültige Fließkommazahl",
     "Not a hex number": "Keine gültige Hexadezimalzahl",
     "Not a valid date": "Kein gültiges Datum",
@@ -111,46 +69,20 @@
     "Not an integer": "Keine gültige Zahl",
     "Not in money format": "Keine gültiger Geldbetrag",
     "not in": "nicht in Liste",
-    "notes only": "Zeige nur die Noten",
-    "Notes": "Noten",
     "Notification": "Nachricht",
     "of": "von",
     "Ok": "Ok",
-    "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
-    "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
-    "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
-    "Open an ABC tutorial (in German)": "Öffne ABC - Einfürung\nin Deutsch",
     "Open Search Fields": "Detailsuche öffnen",
-    "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
-    "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
-    "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
-    "Open": "Öffnen",
-    "page annotation": "Seitenbeschriftung",
-    "Perspective": "Ansicht",
-    "Play music": "Noten wiedergeben",
-    "Play": "AbsPielen",
-    "Print A3 Harpnotes": "Harfennoten A3 drucken",
-    "Print A4 Harpnotes": "Harfennoten A4 drucken",
-    "Print Tune" : "Noten drucken",
-    "Print": "Drucken",
-    "produce": "Auszüge",
     "Record ID": "Zeilen ID",
     "Records": "Zeilen",
-    "Reference": "Referenz",
     "Refreshing...": "Aktualisiere...",
     "Reload data in the list": "Liste aktualisieren",
     "Remove": "Entfernen",
-    "Render previews": "Vorschauen neu errechnen",
-    "Render": "Rendern",
-    "repeatsigns": "Wiederholungszeichen",
-    "repeatsigns.full": "Wiederholugnszeichen.detail",
     "Required field": "Pflichtfeld",
     "Reset Column Size": "Spaltengröße zurücksetzen",
     "Reset": "Zurücksetzen",
     "Restore Default State": "Standardeinstellungen wiederherstellen",
-    "rests as V 1.3": "Pausen wie V. 1.3",
     "Returned data is not in valid JSON format.": "Zurückgegebene Daten sind nicht im JSON-Format.",
-    "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Save changed records": "Geänderte Elemente speichern",
     "Save Grid State": "Grid-Einstellungen speichern",
     "Save": "Speichern",
@@ -164,16 +96,89 @@
     "Select Search Field": "Suchfeld auswählen",
     "selected": "ausgewählt",
     "Server Response": "Server-Antwort",
-    "set screen perspective": "Bildschirmansicht wählen",
-    "sheet config": "Konfiguration",
-    "show all panes": "Zeigt alle Fenster an",
     "Show": "Zeigen",
     "Show/hide columns": "Spalten zeigen/verbergen",
     "Size": "Größe",
     "Skip": "Überspringe",
+    "Sorting took": "Sortierdauer: ",
+    "Toggle Line Numbers": "Zeilennummern ein/aus",
+    "Type to search...": "Suchen...",
+    "Type": "Typ",
+    "Yes": "Ja",
+    "Yesterday": "Gestern",
+    "Your remote data source record count has changed, reloading from the first record.": "Die Datenquelle hat sich geändert, lade Daten ab erstem Eintrag neu.",
+    "flowline": "Melodieliniexxx",
+    "subflowline": "Hilfsmelodielinie",
+    "create": "erzeugen",
+    "abc Tutorial": "ABC - Einführung",
+    "All": "Alle Fenster",
+    "annotation template": "Beschriftungsvorlage",
+    "Choose extract": "Auszug wählen",
+    "configure your sheet": "Blatt konfigureren",
+    "countnotes": "Zählmarken",
+    "Create new sheet": "Neues Blatt erstellen",
+    "Demo": "Demonstration",
+    "download abc to local system": "ABC - File herunterladen",
+    "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
+    "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
+    "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
+    "Enter Harp": "Harfeneingabe",
+    "Enter Notes": "Noteneingabe",
+    "Flowline": "Melodielinie",
+    "flowlines": "Melodielinien",
+    "Get help": "Hilfe anzeigen",
+    "Harp": "Harfennoten",
+    "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
+    "Help": "Hilfe",
+    "Homepage": "Homepage",
+    "Id": "Identifikationsnummer",
+    "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
+    "jumplines": "Sprunglinien",
+    "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
+    "large": "groß",
+    "layout": "Layout",
+    "layoutlines": "Stimmen für Layout",
+    "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
+    "legend": "Legende",
+    "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
+    "Login": "Einloggen",
+    "lyrics": "Liedtexte",
+    "Manual": "Benutzerhandbuch",
+    "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
+    "medium": "normal",
+    "New": "Neu",
+    "nonflowrest": "Begleitpausen",
+    "notes only": "Zeige nur die Noten",
+    "Notes": "Noten",
+    "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
+    "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
+    "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
+    "Open an ABC tutorial (in German)": "Öffne ABC - Einfürung\nin Deutsch",
+    "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
+    "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
+    "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
+    "Open": "Öffnen",
+    "page annotation": "Seitenbeschriftung",
+    "Perspective": "Ansicht",
+    "Play music": "Noten wiedergeben",
+    "Play": "Play",
+    "Please double check the generated sheets.\n\nYour inpout was automatically migrated \nto Zupfnoter version": "Bitte prüfen Sie die erzeugten Noten.\n\nDie Eingabedatei wuede konvertiert auf\nZupfnoter Version ",
+    "Print A3 Harpnotes": "Harfennoten A3 drucken",
+    "Print A4 Harpnotes": "Harfennoten A4 drucken",
+    "Print Tune": "Noten drucken",
+    "Print": "Drucken",
+    "produce": "Auszüge",
+    "Reference": "Referenz",
+    "Render previews": "Vorschauen neu errechnen",
+    "Render": "Rendern",
+    "repeatsigns": "Wiederholungszeichen",
+    "repeatsigns.full": "Wiederholugnszeichen.detail",
+    "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
+    "set screen perspective": "Bildschirmansicht wählen",
+    "sheet config": "Konfiguration",
+    "show all panes": "Zeigt alle Fenster an",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
     "small": "klein",
-    "Sorting took": "Sortierdauer: ",
     "specify all details for repeat signs": "Detaillierte Angaben\nzu Wiederholungszeichen",
     "specify details for legend": "Einzelheiten für Legende\nfestlegen",
     "specify details for lyrics": "Einzelheiten für\nDarstellung der\nLiedtexte festlegen",
@@ -195,20 +200,11 @@
     "startpos": "Startposition",
     "stringnames": "Saitennamen",
     "stringnames.full": "Saitennamen.detail",
-    "subflowline": "Hilfsmelodielinie",
     "subflowlines": "Hilfsmelodielinien",
     "synchlines": "Synchroniationslinien",
     "title": "Titel",
-    "Title": "Titel",
-    "Toggle Line Numbers": "Zeilennummern ein/aus",
-    "Tune": "Noten",
-    "Type to search...": "Suchen...",
-    "Type": "Typ",
     "Videos": "Videos",
     "voices": "Stimmen",
-    "Yes": "Ja",
-    "Yesterday": "Gestern",
-    "Your remote data source record count has changed, reloading from the first record.": "Die Datenquelle hat sich geändert, lade Daten ab erstem Eintrag neu.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten"
   }
 }
