--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -52,9 +52,12 @@
     "page annotation": "Seitenbeschriftung",
     "Perspective": "Ansicht",
     "Play music": "Noten wiedergeben",
-    "Play": "Spielen",
-    "Print PDF A3": "PDF A3 drucken",
-    "Print PDF A4": "PDF A4 drucken",
+    "Play": "Play",
+    "Please double check the generated sheets.\n\nYour inpout was automatically migrated \nto Zupfnoter version": "Bitte prüfen Sie die erzeugten Noten.\n\nDie Eingabedatei wuede konvertiert auf\nZupfnoter Version ",
+    "Print A3 Harpnotes": "Harfennoten A3 drucken",
+    "Print A4 Harpnotes": "Harfennoten A4 drucken",
+    "Print Tune" : "Noten drucken",
+    "Print": "Drucken",
     "produce": "Auszüge",
     "Reference": "Referenz",
     "Render previews": "Vorschauen neu errechnen",
