--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -3,7 +3,10 @@
     "abc Tutorial": "ABC - Einführung",
     "All": "Alle Fenster",
     "annotation template": "Beschriftungsvorlage",
+    "barnumbers": "Taktnummern",
+    "barnumbers.full": "Taktnummern.detail",
     "Choose extract": "Auszug wählen",
+    "configure positioning of rests\ncompatible to version 1.3": "Konfiguriert die Position\nvon Pausen wie\nbei Vesion 1.3",
     "configure your sheet": "Blatt konfigureren",
     "countnotes": "Zählmarken",
     "Create new sheet": "Neues Blatt erstellen",
@@ -56,7 +59,7 @@
     "Please double check the generated sheets.\n\nYour inpout was automatically migrated \nto Zupfnoter version": "Bitte prüfen Sie die erzeugten Noten.\n\nDie Eingabedatei wuede konvertiert auf\nZupfnoter Version ",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
-    "Print Tune" : "Noten drucken",
+    "Print Tune": "Noten drucken",
     "Print": "Drucken",
     "produce": "Auszüge",
     "Reference": "Referenz",
@@ -64,6 +67,7 @@
     "Render": "Rendern",
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
+    "rests as V 1.3": "Pausen wie in V. 1.3",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Save": "Speichern",
     "set screen perspective": "Bildschirmansicht wählen",
@@ -71,6 +75,7 @@
     "show all panes": "Zeigt alle Fenster an",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
     "small": "klein",
+    "specify all details for bar numbers": "Detaillierte Angaben zu Taktnummern",
     "specify all details for repeat signs": "Detaillierte Angaben\nzu Wiederholungszeichen",
     "specify details for legend": "Einzelheiten für Legende\nfestlegen",
     "specify details for lyrics": "Einzelheiten für\nDarstellung der\nLiedtexte festlegen",
@@ -85,6 +90,7 @@
     "specify which voices \nshow the flowline": "Angabe, für welche Stimmen\ndie Melodielinen gezeichnet wird",
     "specify which voices \nshow the jumplines": "Angabe, für welche Stimmen\ndie Sprunglinien gezeichnet werden",
     "specify which voices \nshow the subflowlines": "Angabe, für welche Stimmen\ndie Hilfsmelodielinien\ngezeichnet werden",
+    "specify which voices\n shwow bar numbers\n and appeareance of the same": "Angabe für welche Stimmen\nTaktnummern gedruckt werden\nAngaben zum Aussehen derselben",
     "specify which voices\n shwow countnotes\n and appeareance of the same": "Angabe für welche Stimmen\nZählmarken gedruckt werden\nAngaben zum Aussehen derselben",
     "specify which voices\nare connected by synchronization lines": "Angabe, welche Stimmenüber\nSynchronisationslinien\n(gestrichelte horizontale Linien)\nverbunden werden",
     "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
