#62 improved handling of zoom and perspective

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -127,6 +127,8 @@
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
     "Enter Harp": "Harfeneingabe",
     "Enter Notes": "Noteneingabe",
+    "fit": "auto",
+    "fit to viewport": "in Anzeigebereich\neinpassen",
     "Flowline": "Melodielinie",
     "flowlines": "Melodielinien",
     "Get help": "Hilfe anzeigen",
