#13 more improvements with the automatic conversion

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -58,7 +58,7 @@
     "Perspective": "Ansicht",
     "Play music": "Noten wiedergeben",
     "Play": "Play",
-    "Please double check the generated sheets.\n\nYour inpout was automatically migrated \nto Zupfnoter version": "Bitte prüfen Sie die erzeugten Noten.\n\nDie Eingabedatei wuede konvertiert auf\nZupfnoter Version ",
+    "Please double check the generated sheets.\n\nYour abc file was automatically migrated\nto Zupfnoter version": "Bitte prüfe die erzeugten Noten.\n\nDie Eingabedatei wurde automatisch angepasst auf auf\nZupfnoter Version ",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
     "Print Tune": "Noten drucken",
