#47 changed "Configuration" to "Einstellungen"

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -181,7 +181,7 @@
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "set screen perspective": "Bildschirmansicht wählen",
-    "sheet config": "Konfiguration",
+    "sheet config": "Einstellungen",
     "show all panes": "Zeigt alle Fenster an",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
     "small": "klein",
