#82 now we have printer adaptations #47 added some translations

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -14,7 +14,6 @@
   "shortdays": ["Mo","Di","Mi","Do","Fr","Sa","So"],
   "fulldays": ["Montag","Dienstag","Mittwoch","Donnerstag","Freitag","Samstag","Sonntag"],
   "phrases": {
-    "Add missing entries": "Fehlende Einträge hinzufügen",
     "Add new record": "Neues Element hinzufügen",
     "Add New": "Neu",
     "after": "nach",
@@ -169,6 +168,7 @@
     "Play music": "Noten wiedergeben",
     "Play": "Play",
     "Please double check the generated sheets.\n\nYour abc file was automatically migrated\nto Zupfnoter version": "Bitte prüfe die erzeugten Noten.\n\nDie Eingabedatei wurde automatisch angepasst auf auf\nZupfnoter Version ",
+    "Printer adapt": "Druckeranpassungen",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
     "Print Tune": "Noten drucken",
@@ -182,7 +182,8 @@
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "set screen perspective": "Bildschirmansicht wählen",
-    "sheet config": "Konfiguration",
+    "Add Config": "Add Konfig.",
+    "Edit Config": "Bearbeite Konfig.",
     "show all panes": "Zeigt alle Fenster an",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
     "small": "klein",
