--- a/30_sources/SRC_Zupfnoter/public/locale/conf-help_de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/conf-help_de-de.json
@@ -5,12 +5,17 @@
   "extract.0.barnumbers.voices":"<p>Liste von  Stimmen, die Taktnummern bekommen sollen</p>\n",
   "extract.0.countnotes.voices":"<p>Liste von Stimmen, die Zählhilfen bekommmen sollen</p>\n",
   "layout":"<p>Hier kannst du die Parameter für das Layout eintsllen.\nDamit lässt das Notenbild gezielt optimieren.</p>\n",
+  "layout.limit_a3":"<p>Diese Funktion verschibt Noten am A3-Blattrand\nnach innen. Da das Unterlegnotenblatt etwas\ngrößer ist als A3 würde sonst die Note angeshnitten.</p>\n",
   "lyrics":"<p>Hier wird die Positionierung der Liedtexte gesteuert.\nMan kann die Liedtexte auf mehrer Blöcke aufteilen.\nEin einzelner Block listet die Strophen auf, die er enthält,\nund die gemeinsam poitioniert werden.</p>\n",
   "lyrics.0":"<h2>Liedtextblock</h2>\n\n<p>Ein einzelner Block von Liedtexten.</p>\n",
   "lyrics.0.pos":"<p>Position (angeben als x,y) an welcher der Liedtext-Block ausgegeben werden soll.</p>\n",
   "lyrics.0.verses":"<p>Liste der Strophen die im Liedtext-Block ausgegeben werden.</p>\n",
   "notes.0.pos":"<p>Position (angeben als x,y) der Seitenbeschriftung</p>\n",
   "pos":"<p>Position (angeben als x,y)</p>\n",
+  "printer":"<p>Hier kannst du das Druckbild auf deine Umrebung anpassen.</p>\n\n<blockquote>\n<p><strong>Hinweis</strong> Durch Verwendung dieser Funktion passen die erstellten\nPDF-Dateien eventuell nicht mehr auf andere Umgebungen. Bitte\nverwende die Funktion also erst, wenn du keine geeigneten Einstellungen\nin deinem Druckdialog findest.</p>\n</blockquote>\n",
+  "printer.a3_offset":"<p>Verschiebt das Druckbild beim Ausdruck auf A3-Papier.\nAngabe als x, y in mm.</p>\n\n<p>Dies ist sinnvoll, wenn ein Unterlegnotenblatt für\neine 25 saitige Harfe auf ein A3-Blatt gedruckt wird.</p>\n\n<p>In diesem Fall kann es auch sinnvoll sein, &quot;limit-A3&quot; auzuschalten.</p>\n",
+  "printer.a4_offset":"<p>Verschiebt das Druckbild beim Ausdruck auf A4-Papier.\nAngabe als x, y in mm.</p>\n",
+  "printer.show_border":"<p>Steuert, ob die Blattbegrenzung gedruckt werden soll.\nDie Blattbegrenzung liegt eigntlich ausserhalb\ndes Bereiches, den der Drucker auf dem Papier\nbedrucken kann. Wenn das Druckbild auf dem Papier\nzentriert wird, ist die Blattbegrenzung nicht sichtbar.</p>\n\n<p>Manche Drucker positionieren das Druckbild aber nicht zentriert auf dem Papier.\nDadurch wird die Blattbegrenzung gedruckt, dafür fehlen\nunten ca. 10 mm.</p>\n\n<p>Versuche ob das Ausschalten der Blattbegrenzung die Situation\nverbessert.</p>\n",
   "repeatsigns.voices":"<p>Liste der Stimmen für die Wiederholungszeichen anstelle von Sprunglinine ausgegeben werden.</p>\n",
   "stringnames.text":"<p>Liste der Saitennamen getrennt druch Leerzeichen.\nDie Liste wird so oft zusamengefügt, dass alle Saiten einen Nanen bekommen.</p>\n\n<p>In der Regel reicht es also, die Saitennamen für eine Oktave anzugeben.</p>\n\n<h2>Beispiel</h2>\n\n<ul>\n<li><code>+ -</code> erzeugt <code>+ - +  + - + -</code></li>\n<li><code>C C# D C# E F F# G G# A A# Bb B</code> erzeugt die regulären Saitennamen</li>\n</ul>\n",
   "style":"<p>Formatstil für den Text.</p>\n",
